--- a/S20-App_04-Website/.vscode/settings.json
+++ b/S20-App_04-Website/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "python.pythonPath": ".venv\\Scripts\\python.exe",
     "cSpell.words": [
         "Procfile",
-        "gunicorn"
+        "gunicorn",
+        "venv"
     ],
+    "python.pythonPath": "c:\\Users\\roobb\\GitHub\\Python_Mega_Course\\S20-App_04-Website\\.venv\\Scripts\\python.exe",
 }
