--- a/S25-OpenCV/.vscode/settings.json
+++ b/S25-OpenCV/.vscode/settings.json
@@ -4,5 +4,11 @@
         "editor.rulers": [
             80
         ]
-    }
+    },
+    "cSpell.words": [
+        "imread",
+        "imshow",
+        "imwrite",
+        "ndim"
+    ]
 }
