--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,6 @@
 
 # Ignore html files for the repository language classification
 *.html linguist-detectable=false
+
+# Ignore Jupyter notebooks files for the repository language classification
+*.ipynb linguist-detectable=false
