--- a/S26-App_06-Motion/.vscode/settings.json
+++ b/S26-App_06-Motion/.vscode/settings.json
@@ -8,10 +8,14 @@
     },
     "cSpell.words": [
         "RETR",
+        "bokeh",
         "cnts",
         "imread",
         "imshow",
         "imwrite",
-        "ndim"
+        "ndim",
+        "strftime",
+        "yaxis",
+        "ygrid"
     ]
 }
