--- a/S20-App_04-Website/.vscode/settings.json
+++ b/S20-App_04-Website/.vscode/settings.json
@@ -5,4 +5,7 @@
         "venv"
     ],
     "python.pythonPath": "c:\\Users\\roobb\\GitHub\\Python_Mega_Course\\S20-App_04-Website\\.venv\\Scripts\\python.exe",
+    "editor.rulers": [
+        79
+    ],
 }
