Edited Mobile App

--- a/S33_App_11-Mobile_App/.vscode/settings.json
+++ b/S33_App_11-Mobile_App/.vscode/settings.json
@@ -2,5 +2,8 @@
     "python.pythonPath": ".venv\\Scripts\\python.exe",
     "cSpell.words": [
         "kivy"
+    ],
+    "editor.rulers": [
+        79
     ]
 }
