--- a/S33_App_11-Mobile_App/.vscode/settings.json
+++ b/S33_App_11-Mobile_App/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "python.pythonPath": ".venv\\Scripts\\python.exe",
     "cSpell.words": [
-        "kivy"
+        "kivy",
+        "pword",
+        "strftime",
+        "uname"
     ],
     "editor.rulers": [
         79
